syntax = "proto3";

package NAlice.NIoT;

option go_package = "a.yandex-team.ru/alice/iot/bulbasaur/protos";

message UniversalContinueArguments {
    string ProcessorName = 1;
    bytes PayloadJSON = 2;
}

message TContinueArguments {
    oneof Value {
        UniversalContinueArguments UniversalContinueArguments = 1;
    }
};
