import "alice/megamind/protos/div/card.proto";
import "alice/megamind/protos/div/div2_cards.proto";

package NAlice;

import "alice/library/censor/protos/extension.proto";

option go_package = "a.yandex-team.ru/alice/megamind/protos/nlg";
option java_package = "ru.yandex.alice.megamind.protos.nlg";
option java_outer_classname = "NlgProto";

import "mapreduce/yt/interface/protos/extension.proto";

message TNlgEntityProto {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    optional string TemplateId = 1;
    optional string PhraseId = 2;
    optional string Context = 3;
};

message TRenderResult {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    // phrase
    optional string Text = 1 [json_name = "text", (NYT.column_name) = "text", (FieldAccess) = A_PRIVATE_RESPONSE];
    optional string Voice = 2 [json_name = "voice", (NYT.column_name) = "voice", (FieldAccess) = A_PRIVATE_RESPONSE];

    // card (copy pasted from TDivCardBody)
    repeated TBackground Background = 3 [json_name = "background", (NYT.column_name) = "background"];
    repeated TCardState States = 4 [json_name = "states", (NYT.column_name) = "states"];

    // div2 cards (just one in this case)
    optional TDiv2Cards Div2Cards = 5 [json_name = "div2_cards", (NYT.column_name) = "div2_cards"];
}
